// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSettings hide invite code if no permissions for team inviting 1`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          onClick={[MockFunction]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-access-tab-content user-settings"
      >
        <React.Fragment>
          <CheckboxSettingItem
            className="access-allowed-domains-section"
            description={
              Object {
                "defaultMessage": "When enabled, users can only join the team if their email matches a specific domain (e.g. \\"mattermost.org\\")",
                "id": "general_tab.allowedDomainsInfo",
              }
            }
            descriptionAboveContent={true}
            handleChange={[Function]}
            inputFieldData={
              Object {
                "name": "name",
                "title": Object {
                  "defaultMessage": "Allow only users with a specific email domain to join this team",
                  "id": "general_tab.allowedDomains",
                },
              }
            }
            inputFieldValue={false}
            title={
              Object {
                "defaultMessage": "Users with a specific email domain",
                "id": "general_tab.allowedDomainsTitle",
              }
            }
          />
        </React.Fragment>
        <div
          className="divider-light"
        />
        <OpenInvite
          allowOpenInvite={false}
          isGroupConstrained={false}
          setAllowOpenInvite={[Function]}
        />
        <div
          className="divider-light"
        />
        <BaseSettingItem
          className="access-invite-section"
          content={
            <div
              id="teamInviteContainer"
            >
              <ForwardRef
                className="form-control"
                id="teamInviteId"
                maxLength={32}
                type="text"
                value=""
              />
              <button
                className="btn btn-tertiary"
                id="regenerateButton"
                onClick={[Function]}
              >
                <RefreshIcon />
                Regenerate
              </button>
            </div>
          }
          description={
            Object {
              "defaultMessage": "The Invite Code is part of the unique team invitation link which is sent to members you’re inviting to this team. Regenerating the code creates a new invitation link and invalidates the previous link.",
              "id": "general_tab.codeLongDesc",
            }
          }
          descriptionAboveContent={true}
          title={
            Object {
              "defaultMessage": "Invite Code",
              "id": "general_tab.codeTitle",
            }
          }
        />
      </div>
    </React.Fragment>
  }
/>
`;

exports[`components/TeamSettings hide invite code if no permissions for team inviting 2`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          onClick={[MockFunction]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-access-tab-content user-settings"
      >
        <React.Fragment>
          <CheckboxSettingItem
            className="access-allowed-domains-section"
            description={
              Object {
                "defaultMessage": "When enabled, users can only join the team if their email matches a specific domain (e.g. \\"mattermost.org\\")",
                "id": "general_tab.allowedDomainsInfo",
              }
            }
            descriptionAboveContent={true}
            handleChange={[Function]}
            inputFieldData={
              Object {
                "name": "name",
                "title": Object {
                  "defaultMessage": "Allow only users with a specific email domain to join this team",
                  "id": "general_tab.allowedDomains",
                },
              }
            }
            inputFieldValue={false}
            title={
              Object {
                "defaultMessage": "Users with a specific email domain",
                "id": "general_tab.allowedDomainsTitle",
              }
            }
          />
        </React.Fragment>
        <div
          className="divider-light"
        />
        <OpenInvite
          allowOpenInvite={false}
          isGroupConstrained={false}
          setAllowOpenInvite={[Function]}
        />
        <div
          className="divider-light"
        />
      </div>
    </React.Fragment>
  }
/>
`;

exports[`components/TeamSettings should match snapshot when team is group constrained 1`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          onClick={[MockFunction]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-access-tab-content user-settings"
      >
        <div
          className="divider-light"
        />
        <OpenInvite
          allowOpenInvite={false}
          isGroupConstrained={true}
          setAllowOpenInvite={[Function]}
        />
        <div
          className="divider-light"
        />
      </div>
    </React.Fragment>
  }
/>
`;
